--- a/filebeat/Makefile
+++ b/filebeat/Makefile
@@ -4,6 +4,7 @@ SYSTEM_TESTS?=true
 TEST_ENVIRONMENT?=true
 GOX_FLAGS=-arch="amd64 386 arm ppc64 ppc64le"
 ES_BEATS?=..
+TAG=5.5.2
 
 include ${ES_BEATS}/libbeat/scripts/Makefile
 
@@ -62,4 +63,4 @@ create-fileset: python-env
 docker:
 	@docker run --rm --name golang -v $(shell dirname $(shell pwd)):/go/src/github.com/elastic/beats/ golang:1.8.3-alpine3.6 /bin/sh -c "cd /go/src/github.com/elastic/beats/filebeat && apk add --update build-base && go build --ldflags -w -o filebeat"
 image: docker
-	docker build -t filebeat:latest -f Dockerfile.dev .
+	docker build -t filebeat:$(TAG) -f Dockerfile.dev .
