--- a/filebeat/Dockerfile.dev
+++ b/filebeat/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM alpine:3.6
 
-COPY _meta/beat.yml /beat-template.yml
+COPY _meta/beat.yml /etc/filebeat/config/beat-template.yml
 COPY fields.yml /fields.yml
 COPY run.sh /run.sh
 COPY filebeat /filebeat
