--- a/filebeat/filebeat-ds.yml
+++ b/filebeat/filebeat-ds.yml
@@ -88,6 +88,8 @@ spec:
           mountPath: /var/log/filebeat
         - name: filebeatdata
           mountPath: /usr/local/share/filebeat
+        - name: filebeatconfig
+          mountPath: /etc/filebeat/config
       terminationGracePeriodSeconds: 30
       volumes:
       - name: varlibdockercontainers
@@ -99,4 +101,40 @@ spec:
       - name: filebeatdata
         hostPath:
           path: /usr/local/share/filebeat
-
+      - name: filebeatconfig
+        configMap:
+          name: filebeatconfig
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: filebeatconfig
+  namespace: kube-system
+  labels:
+    addonmanager.kubernetes.io/mode: Reconcile
+data:
+  beat-template.yml: |-
+     filebeat.prospectors:
+     - type: log
+       paths:
+          - /var/lib/docker/containers/*/*-json.log
+     processors:
+     - add_kubernetes_metadata:
+         in_cluster: true
+         host: "${hostname}"
+     - decode_json_fields:
+         fields: ["message"]
+     - drop_fields:
+         fields: ["source", "beat.version", "beat.name"]
+     - parse_level:
+         levels: ["fatal", "error", "warn", "info", "debug"]
+         field: "message.log"
+     setup.template.enabled: true
+     setup.template.name: "filebeat-%{+yyyy.MM.dd}"
+     setup.template.pattern: "filebeat-*"
+     setup.template.fields: "${path.config}/fields.yml"
+     setup.template.overwrite: true
+     output:
+       elasticsearch:
+         hosts: ["10.4.109.133:9200"]
+         index: "filebeat-%{+yyyy.MM.dd}"
