--- a/filebeat/fields.yml
+++ b/filebeat/fields.yml
@@ -9,6 +9,12 @@
       description: >
         The file from which the line was read. This field contains the absolute path to the file.
         For example: `/var/log/system.log`.
+    - name: filepath
+      type: keyword
+      required: false
+      description: >
+        The file from which the line was read. This field contains the absolute path to the file.
+        For example: `/var/log/system.log`.
     - name: level
       type: keyword
       required: false
