--- a/filebeat/_meta/beat.yml
+++ b/filebeat/_meta/beat.yml
@@ -2,6 +2,7 @@ filebeat.prospectors:
 - type: log
   paths:
     - /var/lib/docker/containers/*/*-json.log
+    - /var/log/containers/applogs/*
 
 processors:
 - add_kubernetes_metadata:
