--- a/filebeat/fields.yml
+++ b/filebeat/fields.yml
@@ -6,50 +6,32 @@
     - name: source
       type: keyword
       required: false
-      description: >
-        The file from which the line was read. This field contains the absolute path to the file.
-        For example: `/var/log/system.log`.
+
     - name: filepath
       type: keyword
       required: false
-      description: >
-        The file from which the line was read. This field contains the absolute path to the file.
-        For example: `/var/log/system.log`.
+
     - name: level
       type: keyword
       required: false
-      description: >
-        The file from which the line was read. This field contains the absolute path to the file.
-        For example: `/var/log/system.log`.
 
     - name: offset
       type: long
       required: false
-      description: >
-        The file offset the reported line starts at.
 
-    - name: message
+    - name: "@timestamp"
+      type: date
+      required: false
+
+    - name: time
+      type: date
+      required: false
+
+    - name: log
       type: text
-      ignore_above: 0
       required: false
-      description: >
-        The content of the line read from the log file.
+      analyzer: enncloud_analyzer
 
-    - name: prospector.type
+    - name: stream
+      type: keyword
       required: false
-      description: >
-        The prospector type from which the event was generated. This field is set to the value specified for the `type` option in the prospector section of the Filebeat config file.
-
-    - name: read_timestamp
-      description: >
-        In case the ingest pipeline parses the timestamp from the log contents, it stores
-        the original `@timestamp` (representing the time when the log line was read) in this
-        field.
-
-    - name: fileset.module
-      description: >
-        The Filebeat module that generated this event.
-
-    - name: fileset.name
-      description: >
-        The Filebeat fileset that generated this event.
