--- a/filebeat/_meta/beat.yml
+++ b/filebeat/_meta/beat.yml
@@ -2,7 +2,7 @@ filebeat.prospectors:
 - type: log
   paths:
     - /var/lib/docker/containers/*/*-json.log
-    - /var/log/containers/applogs/*
+    - /var/log/filelog/containers/*/*/*/*.log
 
 processors:
 - add_kubernetes_metadata:
