--- a/filebeat/filebeat-ds.yml
+++ b/filebeat/filebeat-ds.yml
@@ -130,7 +130,7 @@ data:
      - type: log
        paths:
           - /var/lib/docker/containers/*/*-json.log
-          - /var/log/containers/applogs/*
+          - /var/log/filelog/containers/*/*/*/*.log
 
      processors:
      - add_kubernetes_metadata:
