--- a/filebeat/filebeat-ds-docker.yml
+++ b/filebeat/filebeat-ds-docker.yml
@@ -1,49 +1,3 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: filebeat
-  namespace: kube-system
-  labels:
-    k8s-app: filebeat
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
----
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: filebeat
-  labels:
-    k8s-app: filebeat
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - "namespaces"
-  - "pods"
-  verbs:
-  - "get"
-  - "watch"
-  - "list"
----
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: filebeat
-  labels:
-    k8s-app: filebeat
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-subjects:
-- kind: ServiceAccount
-  name: filebeat
-  namespace: kube-system
-  apiGroup: ""
-roleRef:
-  kind: ClusterRole
-  name: filebeat
-  apiGroup: ""
 ---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -65,10 +19,9 @@ spec:
       annotations:
         scheduler.alpha.kubernetes.io/critical-pod: ''
     spec:
-      serviceAccountName: filebeat
       containers:
       - name: filebeat
-        image: harbor.enncloud.cn/enncloud/filebeat:5.5.2-1510124771
+        image: harbor.enncloud.cn/enncloud/filebeat:5.5.2-1510575420
         resources:
           limits:
             memory: 500Mi
@@ -146,7 +99,7 @@ data:
          overwrite_keys: true
          target: ""
      - drop_fields:
-         fields: ["docker.container.labels.annotation.io.kubernetes.container.terminationMessagePath", "docker.container.labels.annotation.io.kubernetes.container.hash", "docker.container.labels.annotation.io.kubernetes.container.terminationMessagePolicy", "docker.container.labels.annotation.io.kubernetes.pod.terminationGracePeriod", "message", "beat.version", "docker.container.labels.annotation.io.kubernetes.container.ports", "docker.container.labels.io.kubernetes.container.terminationMessagePath", "docker.container.labels.io.kubernetes.container.restartCount", "docker.container.labels.io.kubernetes.container.ports", "docker.container.labels.io.kubernetes.container.hash", "docker.container.labels.io.kubernetes.pod.terminationGracePeriod"]
+         fields: ["docker.container.labels.annotation.io.kubernetes.container.terminationMessagePath", "docker.container.labels.annotation.io.kubernetes.container.hash", "docker.container.labels.annotation.io.kubernetes.container.terminationMessagePolicy", "docker.container.labels.annotation.io.kubernetes.pod.terminationGracePeriod", "beat.version", "docker.container.labels.annotation.io.kubernetes.container.ports", "docker.container.labels.io.kubernetes.container.terminationMessagePath", "docker.container.labels.io.kubernetes.container.restartCount", "docker.container.labels.io.kubernetes.container.ports", "docker.container.labels.io.kubernetes.container.hash", "docker.container.labels.io.kubernetes.pod.terminationGracePeriod", "docker.container.labels.annotation.io.kubernetes.container.restartCount", "message"]
      - parse_level:
          levels: ["fatal", "error", "warn", "info", "debug"]
          field: "log"
@@ -173,5 +126,5 @@ data:
 
      output:
        elasticsearch:
-         hosts: ["10.4.109.81:9200"]
+         hosts: ["paasdev.enncloud.cn:9200"]
          index: "filebeat-%{+yyyy.MM.dd}"
